--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -36,8 +36,8 @@ sensor:
             UV Today: Sun Protection 
             {{ as_timestamp(states('sensor.narara_uv_start_time_0')) | timestamp_custom(' %I:%M%p') | lower | replace(" 0", "") }} to {{ as_timestamp(states('sensor.narara_uv_end_time_0')) | timestamp_custom(' %I:%M%p') | lower | replace(" 0", "") }}, UV Index predicted to reach {{ states('sensor.narara_uv_max_index_0') }} [{{ states('sensor.narara_uv_category_0') }}]
 
-      bom_fire_danger:
-        value_template: "Fire Danger Today: {{ states('sensor.narara_fire_danger_0') }}"
+      # bom_fire_danger:
+      #   value_template: "Fire Danger Today: {{ states('sensor.narara_fire_danger_0') }}"
 
       bom_forecast_0:
         friendly_name: "Today"
