--- a/packages/rooms/mediaroom.yaml
+++ b/packages/rooms/mediaroom.yaml
@@ -22,6 +22,7 @@ template:
       device_class: energy
       state: "{{ states('sensor.loungeroom_power')|float(0)
                + states('sensor.tvunit_energy_power')|float(0)
+               + states('sensor.pianopowerplug_energy_power')|float(0)
                + states('sensor.mediaroomside_energy_power')|float(0)}}"
                
 
@@ -46,6 +47,32 @@ light:
         turn_off:
           service: script.turn_on
           entity_id: script.turn_tv_lights_off
+      mediaroom_strips:
+        friendly_name: "Media Room Strips"
+        value_template: >
+          {% if states('select.loungeroomstrip_preset') %}
+            {% if is_state('select.loungeroomstrip_preset','Default') and is_state('light.loungeroomstrip_master','on') %}
+              true
+            {% else %}
+              false
+            {% endif %}
+          {% else %}
+            false
+          {% endif %}
+        turn_on:
+          - service: light.turn_on
+            target:
+             entity_id: light.tvbacklight
+          - service: select.select_option
+            target:
+              entity_id: select.loungeroomstrip_preset
+            data:
+              option: "Default"
+        turn_off:
+          service: light.turn_off
+          target:
+            entity_id: light.loungeroomstrip_master
+      
 
 switch:
   - platform: template
