--- a/packages/rooms/garage.yaml
+++ b/packages/rooms/garage.yaml
@@ -1,9 +1,45 @@
 light:
-  - platform: group
-    name: Garage Lights
-    entities:
-      - light.garage_left
-      - light.garage_right
+  - platform: template
+    lights:
+      garage_lights:
+        friendly_name: Garage Lights
+        value_template: >-
+          {% if is_state('light.garage_left','on') or is_state('light.garage_right', 'on') %}
+            on
+          {% else %}
+            off
+          {% endif %}
+        level_template: >-
+          {% if is_state('light.garage_left','on') and is_state('light.garage_right', 'on') %}
+            255
+          {% elif is_state('light.garage_left','on') and is_state('light.garage_right', 'off') %}
+            170
+          {% elif is_state('light.garage_left','off') and is_state('light.garage_right', 'on') %}
+            85
+          {% else %}
+            0
+          {% endif %}
+        turn_on:
+          - service: light.turn_on
+            entity_id: light.garage_left
+          - service: light.turn_on
+            entity_id: light.garage_right
+        turn_off:
+          - service: light.turn_off
+            entity_id: light.garage_left
+          - service: light.turn_off
+            entity_id: light.garage_right
+        set_level:
+          - service: light.turn_on
+            entity_id: light.garage_right
+            data:
+              brightness: >-
+                {% if ((brightness > 0) and (brightness <= 85)) or (brightness>170)%}255{%else%}0{%endif%}
+          - service: light.turn_on
+            entity_id: light.garage_left
+            data:
+              brightness: >-
+                {% if brightness > 85 %}255{%else%}0{%endif%}
 
 template:
   - binary_sensor:
