--- a/packages/power.yaml
+++ b/packages/power.yaml
@@ -24,6 +24,9 @@ template:
                 + states('sensor.lights_energy_power')|float(0)
                 + states('sensor.livingtv_energy_power')|float(0)
                 + states('sensor.oven_power')|float(0)
+                + states('sensor.mediaroomside_energy_power')|float(0)
+                + states('sensor.pianopowerplug_energy_power')|float(0)
+                + states('sensor.printer_energy_power')|float(0)
                 + states('sensor.serverstack_energy_power')|float(0)
                 + states('sensor.tvunit_energy_power')|float(0)
                 + states('sensor.washingmachine_energy_power')|float(0)
