--- a/packages/rooms/bedroom.yaml
+++ b/packages/rooms/bedroom.yaml
@@ -11,6 +11,7 @@ template:
       state_class: measurement
       device_class: energy
       state: "{{ states('sensor.bedroomdimmer_power')|float(0)
+               + states('sensor.bedroombedplug_energy_power')|float(0)
                + states('sensor.bedroomplug_energy_power')|float(0)}}"
 
 automation:
@@ -66,9 +67,13 @@ automation:
     - platform: time
       at: '20:25:00'
     condition:
-      - condition: state
-        entity_id: light.bedroom_lights
-        state: 'off'
+      - and:
+        - condition: state
+          entity_id: light.bedroom_lights
+          state: 'off'
+        - condition: numeric_state
+          entity_id: sensor.bedroomplug_energy_power
+          below: 30
     action:
     - service: light.turn_on
       data_template:
